# surimi-survivors

./: Cargo.toml
src/: enemy.rs  main.rs
