[package]
name = "surimi-survivors"
version = "0.1.0"
authors = ["Timon Borg <timon.borg@gmail.com>", "Max Kivits <m.p.w.kivits@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nanoserde = "0.1"
macroquad = "0.3"
macroquad-platformer = "0.1"
macroquad-tiled = "0.1"
macroquad-particles = {version = "0.1", features = ["nanoserde"] }
bitfield = "0.13"
rand = "0.8.5"
# nakama-rs = "0.1"
base64 = "0.13"
